added all sample on lesson14